--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "dependencies": {
     "sqlite3": "~3.0.4",
     "cheerio": "~0.18.0"
+  },
+  "devDependencies": {
+    "chai": "~1.10.0",
+    "mocha-unfunk-reporter": "~0.4.0",
+    "mocha": "~2.0.1",
+    "chai-fs": "~0.1.0"
   }
 }
