--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chai": "~1.10.0",
     "mocha-unfunk-reporter": "~0.4.0",
     "mocha": "~2.0.1",
-    "chai-fs": "~0.1.0"
+    "chai-fs": "~0.1.0",
+    "ramda": "~0.7.2"
   }
 }
