--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mocha-unfunk-reporter": "~0.4.0",
     "mocha": "~2.0.1",
     "chai-fs": "~0.1.0",
-    "ramda": "~0.7.2"
+    "ramda": "~0.7.2",
+    "q": "~1.1.1"
   }
 }
