--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "private": true,
   "dependencies": {
     "sqlite3": "~3.0.4",
-    "cheerio": "~0.18.0"
+    "cheerio": "~0.18.0",
+    "q": "~1.1.1",
+    "LiveScript": "~1.3.1"
   },
   "devDependencies": {
     "chai": "~1.10.0",
     "mocha-unfunk-reporter": "~0.4.0",
     "mocha": "~2.0.1",
     "chai-fs": "~0.1.0",
-    "ramda": "~0.7.2",
-    "q": "~1.1.1"
+    "ramda": "~0.7.2"
   }
 }
