--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "cheerio": "~0.18.0",
     "q": "~1.1.1",
     "LiveScript": "~1.3.1",
-    "prelude-ls": "~1.1.1"
+    "prelude-ls": "~1.1.1",
+    "ramda": "^0.13.0"
   },
   "devDependencies": {
     "chai": "~1.10.0",
