--- a/static/Contents/Info.plist
+++ b/static/Contents/Info.plist
@@ -10,6 +10,8 @@
 	<string>ramda</string>
 	<key>isDashDocset</key>
 	<true/>
+    <key>isJavaScriptEnabled</key>
+    <true/>
     <key>dashIndexFilePath</key>
     <string>index.html</string>
 </dict>
