--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
   "dependencies": {
-    "sqlite3": "~3.0.4",
-    "cheerio": "~0.18.0",
-    "q": "~1.1.1",
     "LiveScript": "~1.3.1",
+    "cheerio": "~0.18.0",
     "prelude-ls": "~1.1.1",
-    "ramda": "^0.13.0"
+    "q": "~1.1.1",
+    "ramda": "^0.13.0",
+    "sqlite3": "^3.1.2"
   },
   "devDependencies": {
     "chai": "~1.10.0",
