--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "private": true,
   "dependencies": {
     "LiveScript": "~1.3.1",
-    "cheerio": "~0.18.0",
+    "cheerio": "^0.20.0",
     "prelude-ls": "~1.1.1",
-    "q": "~1.1.1",
-    "ramda": "^0.13.0",
+    "q": "^1.4.1",
+    "ramda": "^0.20.1",
     "sqlite3": "^3.1.2"
   },
   "devDependencies": {
     "chai": "~1.10.0",
-    "mocha-unfunk-reporter": "~0.4.0",
-    "mocha": "~2.0.1",
-    "chai-fs": "~0.1.0"
+    "chai-fs": "~0.1.0",
+    "mocha": "^2.4.5",
+    "mocha-unfunk-reporter": "~0.4.0"
   }
 }
