--- a/templates/Contents/Info.plist
+++ b/templates/Contents/Info.plist
@@ -15,6 +15,6 @@
 	<key>dashIndexFilePath</key>
 	<string>index.html</string>
 	<key>DashDocSetPlayURL</key>
-	<string>http://ramdajs.com/repl/?v=0.24.1</string>
+	<string>http://ramdajs.com/repl/?v={{ramda_version}}</string>
 </dict>
 </plist>
